--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- header -->
     <header>
-        <div class="class-container">
+        <div class="main-container">
             <div class="nav">
                 <div class="logo">
                     <a href="#">FF</a>
@@ -24,7 +24,7 @@
                         <li><a href="#services">Services</a></li>
                         <li><a href="#portfolio">Portfolios</a></li>
                         <li><a href="#skill">Skills</a></li>
-                        <li><a href="#contact">Contac</a></li>
+                        <li><a href="#contact">Contact</a></li>
                         <li><a href="resume.pdf" target="_blank">Resume</a></li>
                     </ul>
                 </nav>
@@ -38,6 +38,20 @@
                 <!-- burger -->
             </div>
         </div>
+
+        <!-- hero -->
+         <section id="hero">
+            <div class="hero-left">
+                
+            </div>
+            <div class="hero-right">
+                <h3 class="pre-title">My Name Is</h3>
+                <h1 class="hero-name">Farhan <span>Fakhrudin</span></h1>
+                <p>
+                    
+                </p>
+            </div>
+         </section>
     </header>
     <!-- end of header -->
 
